# fastQDA

./: .gitignore  CMakeLists.txt  Makefile  README.md  easyCoding.pro  easycoding.sublime-workspace  fastQDA.pro  fastqda.sublime-project  fastqda.sublime-workspace  main.cpp  moc_codeSettings.cpp  moc_easycoding.cpp  moc_mainWidget.cpp  poppler.rb
cmake/: FindPoppler.cmake
control/: codeManager.cpp  codeManager.h
easyCoding.app/Contents/: Info.plist
easyCoding.app/Contents/MacOS/: easyCoding
fastQDA.app/Contents/: Info.plist
fastQDA.app/Contents/MacOS/: fastQDA
inc/control/: codeManager.h  documentManager.h
inc/model/: code.h  document.h
inc/view/: codeList.h  codeSettings.h  documentList.h  documentwidget.h  fastqda.h  mainWidget.h
model/: code.cpp  code.h
src/: CMakeLists.txt
src/control/: codeManager.cpp
src/model/: code.cpp  document.cpp
src/view/: codeList.cpp  codeSettings.cpp  documentList.cpp  documentwidget.cpp  fastqda.cpp  mainWidget.cpp
view/: codeList.cpp  codeList.h  codeSettings.cpp  codeSettings.h  documentList.cpp  documentList.h  easycoding.cpp  easycoding.h  fastqda.cpp  fastqda.h  mainWidget.cpp  mainWidget.h
